jumping menu fix

--- a/src/layout/nav/_nav.scss
+++ b/src/layout/nav/_nav.scss
@@ -62,7 +62,7 @@
       &.active {
         background-color: $color-gray-70;
         color: $color-white;
-        border: 0;
+        border-color: transparent;
       }
 
       &:focus-visible {
